fix main content index

--- a/CoCo/front-end/manager/index.html
+++ b/CoCo/front-end/manager/index.html
@@ -57,8 +57,8 @@
             <img src="../images/banner.png" alt="banner" class="banner">
         </section>
 
-        <section class="content container-fluid py-5">
-            <h1 class="welcome">Chào mừng đến với hệ thống quản lý Covid-19</h1>
+        <section class="content container-fluid py-5" style="height:300px">
+            <h1 class="welcome" style="width:auto">Chào mừng đến với hệ thống quản lý Covid-19</h1>
         </section>
 
         <footer class="footer">
