--- a/CoCo/front-end/admin/managers/add-manager-page.html
+++ b/CoCo/front-end/admin/managers/add-manager-page.html
@@ -64,62 +64,41 @@
                 </ol>
               </nav>
             <div class="content">
-                <h2 class="form-heading">Thêm tài khoản người quản lý</h2>
-                <!--<form class="form-horizontal" action="/action_page.php">
-                    <div class="form-group">
-                      <label class="control-label col-sm-2" for="email">Email:</label>
-                      <div class="col-sm-10">
-                        <input type="email" class="form-control" id="email" placeholder="Enter email">
-                      </div>
+                <h3 class="form-heading mb-3 p-2 ">Thêm tài khoản người quản lý</h3>
+                <form class="form-add-manager p-2">
+                  <div class="form-group row">
+                    <label for="username" class="col-lg-5 col-sm-5 col-form-label">Tên người dùng</label>
+                    <div class="col-lg-7 col-sm-7">
+                      <input type="text" class="form-control" id="username">
                     </div>
-                    <div class="form-group">
-                      <label class="control-label col-sm-2" for="pwd">Password:</label>
-                      <div class="col-sm-10">
-                        <input type="password" class="form-control" id="pwd" placeholder="Enter password">
-                      </div>
+                  </div>
+                  <div class="form-group row">
+                    <label for="password" class="col-lg-5 col-sm-5 col-form-label">Mật khẩu</label>
+                    <div class="col-lg-7 col-sm-7">
+                      <input type="password" class="form-control" id="password">
                     </div>
-                    <div class="form-group">
-                      <div class="col-sm-offset-2 col-sm-10">
-                        <div class="checkbox">
-                          <label><input type="checkbox"> Remember me</label>
-                        </div>
-                      </div>
+                  </div>
+                  <div class="form-group row">
+                    <label for="re-password" class="col-lg-5 col-sm-5 col-form-label">Nhập lại mật khẩu</label>
+                    <div class="col-lg-7 col-sm-7">
+                      <input type="password" class="form-control" id="re-password">
                     </div>
-                    <div class="form-group">
-                      <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-default">Submit</button>
-                      </div>
+                  </div>
+                  <div class="form-group row">
+                    <label  class="col-sm-5 col-form-label">Phân quyền</label>
+                    <div class="col-sm-7">
+                        <input name = "patient" id="patient" value="patient" type="checkbox">
+                        <label for="patient" class="p-2">Người bệnh</label>
+                        <input name = "necessities" id="necessities" value="necessities" type="checkbox">
+                        <label for="necessities">Nhu yếu phẩm</label>
                     </div>
-                  </form>-->
-
-                <form class="add-manager-form">
-                    <table class="add-manager-table">
-                        <tr class="form-input-text">
-                            <th><label for="username">Username: </label></th>
-                            <td colspan="2"><input type="text" id="username" name="username" value=""></td>
-                        </tr>
-                        <tr class="form-input-text">
-                            <th><label for="password">Mật khẩu:</label></th>
-                            <td colspan="2"><input type="password" id="password" name="password" value=""></td>
-                        </tr>
-                        <tr class="form-input-text">
-                            <th><label for="re-password">Nhập lại mật khẩu:</label></th>
-                            <td colspan="2"><input type="password" id="re-password" name="re-password" value=""></td>
-                        </tr>
-                        <tr class="form-input-2checkbox">
-                            <th>Phân quyền</th>
-                            <td>
-                                <input name = "patient" id="patient" value="patient" type="checkbox">
-                                <label for="patient">Người bệnh</label>
-                            </td>
-                            <td>
-                                <input name = "necessities" id="necessities" value="necessities" type="checkbox">
-                                <label for="necessities">Nhu yếu phẩm</label>
-                            </td>
-                        </tr>
-                    </table> 
+                  </div>
+                  <div class="row button">
+                    <div class="col-sm-10">
+                      <button type="submit" class="btn">Lưu</button>
+                    </div>
+                  </div>
                 </form>
-                <input type="submit" value="Đăng nhập">
             </div>
         </div>
 
