--- a/CoCo/front-end/admin/managers/list-manager-page.html
+++ b/CoCo/front-end/admin/managers/list-manager-page.html
@@ -8,10 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
         rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
         crossorigin="anonymous">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/list-manager-style.css">
+    <link rel="stylesheet" href="css/pagination.css">
     <title>Xem danh sách người quản lý</title>
 </head>
 
@@ -68,6 +69,21 @@
                   <i class="fa-solid fa-magnifying-glass"></i>
               </div>
               <div id="list-manager-table"></div>
+              <div class="page-container">
+                  <button class="first-page" disabled>
+                    <i class="fas fa-angle-double-left"></i>
+                  </button>
+                  <button class="prev-page" disabled>
+                    <i class="fas fa-angle-left"></i>
+                  </button>
+                  <div id="pagination"></div>
+                  <button class="next-page">
+                    <i class="fas fa-angle-right"></i>
+                  </button>
+                  <button class="last-page">
+                    <i class="fas fa-angle-double-right"></i>
+                  </button>
+              </div>
               <div class="button-add">
                   <i class="fa-solid fa-plus fa-3x"></i>
               </div>
@@ -109,6 +125,7 @@
     <script src="https://kit.fontawesome.com/67328d2701.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="js/add-list-manager-table.js"></script>
+    <script src="js/pagination.js"></script>
 </body>
 
 </html>
