Update navbar + static links for related people pages

--- a/CoCo/front-end/related-people/index.html
+++ b/CoCo/front-end/related-people/index.html
@@ -31,10 +31,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav m-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">THÔNG TIN CÁ NHÂN</a>
+                            <a class="nav-link" href="information.html">THÔNG TIN CÁ NHÂN</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">NHU YẾU PHẨM</a>
+                            <a class="nav-link" href="package-list.html">NHU YẾU PHẨM</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">TÀI KHOẢN</a>
