--- a/CoCo/front-end/related-people/payment-history.html
+++ b/CoCo/front-end/related-people/payment-history.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/template-style.css">
     <link rel="stylesheet" href="./css/related.css">
     <title>Lịch sử thanh toán</title>
@@ -16,22 +17,37 @@
 
 <body>
     <main>
-        <nav class="navbar">
-            <img src="../images/Logo.png" alt="logo" style="height:65px; align-self:center;">
-            <ul class="nav-list">
-                <li><a href="#" class="nav-links">NGƯỜI LIÊN QUAN COVID-19</a></li>
-                <li><a href="package-list.html" class="nav-links">NHU YẾU PHẨM</a></li>
-                <li><a href="#" class="nav-links">THỐNG KÊ</a></li>
-                <li><a href="#" class="nav-links">THANH TOÁN</a></li>
-            </ul>
-            <div class="nav-menu"><i class="fa-solid fa-bars fa-2x"></i></div>
+        <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="../images/Logo.png" alt="logo" style="height:65px;align-self:center;">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="information.html">THÔNG TIN CÁ NHÂN</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="package-list.html">NHU YẾU PHẨM</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">TÀI KHOẢN</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
         <img src="../images/banner.png" alt="banner" class="banner">
         <div class="content" style="padding: 20px 20px;">
             <div class="path">
-                <a href="/trang-chu">Trang chủ > </a>
-                <a href="/thong-tin-ca-nhan">Thông tin cá nhân > </a>
-                <a href="/lich-su-thanh-toan">Lịch sử thanh toán</a>
+                <a href="index.html">Trang chủ > </a>
+                <a href="#">Thông tin cá nhân > </a>
+                <a href="#">Lịch sử thanh toán</a>
             </div>
             <div class="info-container">
                 <div class="side-info">
@@ -57,8 +73,10 @@
                     <div id="row-tabs">
                         <div id="tab-detail" class="tab"><a href="information.html">Thông tin chi tiết</a></div>
                         <div id="tab-history" class="tab"><a href="managed-history.html">Lịch sử được quản lý</a></div>
-                        <div id="tab-consumption" class="tab"><a href="consumption-history.html">Lịch sử tiêu thụ</a></div>
-                        <div id="tab-payment" class="tab" style="background-color: #EEEEEE;"><a href="payment-history.html">Lịch sử thanh toán</a></div>
+                        <div id="tab-consumption" class="tab"><a href="consumption-history.html">Lịch sử tiêu thụ</a>
+                        </div>
+                        <div id="tab-payment" class="tab" style="background-color: #EEEEEE;"><a
+                                href="payment-history.html">Lịch sử thanh toán</a></div>
                     </div>
                     <div id="detail-history" style="display: flex; justify-content: center;">
                         <!--Code here-->
@@ -76,61 +94,61 @@
                                         <td>436,000đ</td>
                                     </tr>
                                     <tr>
-                                        <td>2022-02-24 15:00:00</td>
+                                        <td>2022-02-26 15:00:00</td>
                                         <td>436,000đ</td>
                                     </tr>
                                     <tr>
-                                        <td>2022-02-24 15:00:00</td>
+                                        <td>2022-02-27 15:00:00</td>
                                         <td>436,000đ</td>
                                     </tr>
                                     <tr>
-                                        <td>2022-02-24 15:00:00</td>
+                                        <td>2022-02-28 15:00:00</td>
                                         <td>436,000đ</td>
                                     </tr>
                                     <tr>
-                                        <td>2022-02-24 15:00:00</td>
-                                        <td>436,000đ</td>
+                                        <td>2022-03-01 15:00:00</td>
+                                        <td>500,000đ</td>
                                     </tr>
                                     <tr>
-                                        <td>2022-02-24 15:00:00</td>
-                                        <td>436,000đ</td>
+                                        <td>2022-03-01 15:00:00</td>
+                                        <td>500,000đ</td>
                                     </tr>
                                     <tr>
-                                        <td>2022-02-24 15:00:00</td>
-                                        <td>436,000đ</td>
+                                        <td>2022-03-03 15:00:00</td>
+                                        <td>500,000đ</td>
                                     </tr>
                                     <tr>
-                                        <td>2022-02-24 15:00:00</td>
-                                        <td>436,000đ</td>
+                                        <td>2022-03-06 15:00:00</td>
+                                        <td>500,000đ</td>
                                     </tr>
                                     <tr>
-                                        <td>2022-02-24 15:00:00</td>
-                                        <td>436,000đ</td>
+                                        <td>2022-03-08 15:00:00</td>
+                                        <td>500,000đ</td>
                                     </tr>
                                     <tr>
-                                        <td>2022-02-24 15:00:00</td>
-                                        <td>436,000đ</td>
+                                        <td>2022-03-12 15:00:00</td>
+                                        <td>500,000đ</td>
                                     </tr>
                                     <tr>
-                                        <td>2022-02-24 15:00:00</td>
-                                        <td>436,000đ</td>
+                                        <td>2022-03-15 15:00:00</td>
+                                        <td>500,000đ</td>
                                     </tr>
                                     <tr>
-                                        <td>2022-02-24 15:00:00</td>
-                                        <td>436,000đ</td>
-                                    </tr>    
-                                    <tr>
-                                        <td>2022-02-24 15:00:00</td>
-                                        <td>436,000đ</td>
+                                        <td>2022-03-20 15:00:00</td>
+                                        <td>500,000đ</td>
                                     </tr>
                                     <tr>
-                                        <td>2022-02-24 15:00:00</td>
-                                        <td>436,000đ</td>
+                                        <td>2022-03-21 15:00:00</td>
+                                        <td>500,000đ</td>
                                     </tr>
                                     <tr>
-                                        <td>2022-02-24 15:00:00</td>
-                                        <td>436,000đ</td>
-                                    </tr>                                
+                                        <td>2022-03-25 15:00:00</td>
+                                        <td>500,000đ</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-03-27 15:00:00</td>
+                                        <td>500,000đ</td>
+                                    </tr>
                                 </tbody>
                             </table>
                         </div>
@@ -172,6 +190,11 @@
             </div>
         </footer>
     </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/c370f69368.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
