--- a/CoCo/front-end/related-people/consumption-history.html
+++ b/CoCo/front-end/related-people/consumption-history.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/template-style.css">
     <link rel="stylesheet" href="./css/related.css">
     <title>Lịch sử tiêu thụ</title>
@@ -16,22 +17,37 @@
 
 <body>
     <main>
-        <nav class="navbar">
-            <img src="../images/Logo.png" alt="logo" style="height:65px; align-self:center;">
-            <ul class="nav-list">
-                <li><a href="#" class="nav-links">NGƯỜI LIÊN QUAN COVID-19</a></li>
-                <li><a href="package-list.html" class="nav-links">NHU YẾU PHẨM</a></li>
-                <li><a href="#" class="nav-links">THỐNG KÊ</a></li>
-                <li><a href="#" class="nav-links">THANH TOÁN</a></li>
-            </ul>
-            <div class="nav-menu"><i class="fa-solid fa-bars fa-2x"></i></div>
+        <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="../images/Logo.png" alt="logo" style="height:65px;align-self:center;">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="information.html">THÔNG TIN CÁ NHÂN</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="package-list.html">NHU YẾU PHẨM</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">TÀI KHOẢN</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
         <img src="../images/banner.png" alt="banner" class="banner">
         <div class="content" style="padding: 20px 20px;">
             <div class="path">
-                <a href="/trang-chu">Trang chủ > </a>
-                <a href="/thong-tin-ca-nhan">Thông tin cá nhân > </a>
-                <a href="/lich-su-tieu-thu">Lịch sử tiêu thụ</a>
+                <a href="index.html">Trang chủ > </a>
+                <a href="#">Thông tin cá nhân > </a>
+                <a href="#">Lịch sử tiêu thụ</a>
             </div>
             <div class="info-container">
                 <div class="side-info">
@@ -88,120 +104,97 @@
                                         <td>2</td>
                                         <td>150,000đ</td>
                                     </tr>
+
                                     <tr>
-                                        <td>2022-02-24 15:00:00</td>
+                                        <td>2022-02-26 15:00:00</td>
                                         <td>Thịt cá trứng 1</td>
                                         <td>436,000đ</td>
                                         <td>1</td>
                                         <td>436,000đ</td>
                                     </tr>
                                     <tr>
-                                        <td>2022-02-24 15:00:00</td>
-                                        <td>Rau củ quả 3</td>
-                                        <td>75,000đ</td>
-                                        <td>2</td>
-                                        <td>150,000đ</td>
-                                    </tr>
-                                    <tr>
-                                        <td>2022-02-24 15:00:00</td>
-                                        <td>Thịt cá trứng 1</td>
-                                        <td>436,000đ</td>
-                                        <td>1</td>
-                                        <td>436,000đ</td>
-                                    </tr>
-                                    <tr>
-                                        <td>2022-02-24 15:00:00</td>
-                                        <td>Rau củ quả 3</td>
-                                        <td>75,000đ</td>
-                                        <td>2</td>
-                                        <td>150,000đ</td>
-                                    </tr>
-                                    <tr>
-                                        <td>2022-02-24 15:00:00</td>
-                                        <td>Thịt cá trứng 1</td>
-                                        <td>436,000đ</td>
-                                        <td>1</td>
-                                        <td>436,000đ</td>
-                                    </tr>
-                                    <tr>
-                                        <td>2022-02-24 15:00:00</td>
-                                        <td>Rau củ quả 3</td>
-                                        <td>75,000đ</td>
-                                        <td>2</td>
-                                        <td>150,000đ</td>
-                                    </tr>
-                                    <tr>
-                                        <td>2022-02-24 15:00:00</td>
-                                        <td>Thịt cá trứng 1</td>
-                                        <td>436,000đ</td>
-                                        <td>1</td>
-                                        <td>436,000đ</td>
-                                    </tr>
-                                    <tr>
-                                        <td>2022-02-24 15:00:00</td>
-                                        <td>Rau củ quả 3</td>
-                                        <td>75,000đ</td>
-                                        <td>2</td>
-                                        <td>150,000đ</td>
-                                    </tr>
-                                    <tr>
-                                        <td>2022-02-24 15:00:00</td>
-                                        <td>Thịt cá trứng 1</td>
-                                        <td>436,000đ</td>
-                                        <td>1</td>
-                                        <td>436,000đ</td>
-                                    </tr>
-                                    <tr>
-                                        <td>2022-02-24 15:00:00</td>
-                                        <td>Rau củ quả 3</td>
-                                        <td>75,000đ</td>
-                                        <td>2</td>
-                                        <td>150,000đ</td>
-                                    </tr>
-                                    <tr>
-                                        <td>2022-02-24 15:00:00</td>
-                                        <td>Thịt cá trứng 1</td>
-                                        <td>436,000đ</td>
-                                        <td>1</td>
-                                        <td>436,000đ</td>
-                                    </tr>
-                                    <tr>
-                                        <td>2022-02-24 15:00:00</td>
-                                        <td>Rau củ quả 3</td>
-                                        <td>75,000đ</td>
-                                        <td>2</td>
-                                        <td>150,000đ</td>
-                                    </tr>
-                                    <tr>
-                                        <td>2022-02-24 15:00:00</td>
-                                        <td>Thịt cá trứng 1</td>
-                                        <td>436,000đ</td>
-                                        <td>1</td>
-                                        <td>436,000đ</td>
-                                    </tr>
-                                    <tr>
-                                        <td>2022-02-24 15:00:00</td>
-                                        <td>Rau củ quả 3</td>
-                                        <td>75,000đ</td>
-                                        <td>2</td>
-                                        <td>150,000đ</td>
-                                    </tr>
-                                    <tr>
-                                        <td>2022-02-24 15:00:00</td>
-                                        <td>Thịt cá trứng 1</td>
-                                        <td>436,000đ</td>
-                                        <td>1</td>
-                                        <td>436,000đ</td>
-                                    </tr>
-                                    <tr>
-                                        <td>2022-02-24 15:00:00</td>
+                                        <td>2022-02-26 15:00:00</td>
                                         <td>Rau củ quả 3</td>
                                         <td>75,000đ</td>
                                         <td>2</td>
                                         <td>150,000đ</td>
                                     </tr>
 
+                                    <tr>
+                                        <td>2022-02-28 15:00:00</td>
+                                        <td>Thịt cá trứng 1</td>
+                                        <td>436,000đ</td>
+                                        <td>1</td>
+                                        <td>436,000đ</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-28 15:00:00</td>
+                                        <td>Rau củ quả 3</td>
+                                        <td>75,000đ</td>
+                                        <td>2</td>
+                                        <td>150,000đ</td>
+                                    </tr>
 
+                                    <tr>
+                                        <td>2022-03-02 15:00:00</td>
+                                        <td>Thịt cá trứng 1</td>
+                                        <td>436,000đ</td>
+                                        <td>1</td>
+                                        <td>436,000đ</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-03-02 15:00:00</td>
+                                        <td>Rau củ quả 3</td>
+                                        <td>75,000đ</td>
+                                        <td>2</td>
+                                        <td>150,000đ</td>
+                                    </tr>
+
+                                    <tr>
+                                        <td>2022-03-05 15:00:00</td>
+                                        <td>Thịt cá trứng 1</td>
+                                        <td>436,000đ</td>
+                                        <td>1</td>
+                                        <td>436,000đ</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-03-05 15:00:00</td>
+                                        <td>Rau củ quả 3</td>
+                                        <td>75,000đ</td>
+                                        <td>2</td>
+                                        <td>150,000đ</td>
+                                    </tr>
+
+                                    <tr>
+                                        <td>2022-03-07 15:00:00</td>
+                                        <td>Thịt cá trứng 1</td>
+                                        <td>436,000đ</td>
+                                        <td>1</td>
+                                        <td>436,000đ</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-03-07 15:00:00</td>
+                                        <td>Rau củ quả 3</td>
+                                        <td>75,000đ</td>
+                                        <td>2</td>
+                                        <td>150,000đ</td>
+                                    </tr>
+
+                                    <tr>
+                                        <td>2022-03-10 15:00:00</td>
+                                        <td>Thịt cá trứng 1</td>
+                                        <td>436,000đ</td>
+                                        <td>1</td>
+                                        <td>436,000đ</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-03-10 15:00:00</td>
+                                        <td>Rau củ quả 3</td>
+                                        <td>75,000đ</td>
+                                        <td>2</td>
+                                        <td>150,000đ</td>
+                                    </tr>
+                                    
                                 </tbody>
                             </table>
                         </div>
@@ -243,6 +236,11 @@
             </div>
         </footer>
     </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/c370f69368.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
