--- a/CoCo/front-end/related-people/package-list.html
+++ b/CoCo/front-end/related-people/package-list.html
@@ -11,8 +11,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/template-style.css">
+    <link rel="stylesheet" href="../manager/products/css/pagination.css">
     <link rel="stylesheet" href="./css/related.css">
     <link rel="stylesheet" href="./css/package-list.css">
+    
     <title>Danh sách gói nhu yếu phẩm</title>
 </head>
 
@@ -395,7 +397,21 @@
 
                 </div>
 
-                <div id="pages"></div>
+                <div class="page-container">
+                    <button class="first-page" disabled>
+                      <i class="fas fa-angle-double-left"></i>
+                    </button>
+                    <button class="prev-page" disabled>
+                      <i class="fas fa-angle-left"></i>
+                    </button>
+                    <div id="pagination"></div>
+                    <button class="next-page">
+                      <i class="fas fa-angle-right"></i>
+                    </button>
+                    <button class="last-page">
+                      <i class="fas fa-angle-double-right"></i>
+                    </button>
+                </div>
             </div>
         </div>
         </div>
@@ -437,6 +453,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
+    <script src="../admin/js/pagination.js"></script>
 </body>
 
 </html>
