add add product detail page

--- a/CoCo/front-end/manager/products/product-list-page.html
+++ b/CoCo/front-end/manager/products/product-list-page.html
@@ -67,9 +67,12 @@
                   <i class="fas fa-angle-double-right"></i>
                 </button>
             </div>
-            <div class="button-add">
-                <i class="fa-solid fa-plus fa-3x"></i>
-            </div>
+            <a href="add-product-page.html">
+                <div class="button-add">
+                    <i class="fa-solid fa-plus fa-3x"></i>
+                </div>
+            </a>
+            
         </div>
 
         <footer class="footer">
