--- a/CoCo/front-end/manager/products/product-detail-page.html
+++ b/CoCo/front-end/manager/products/product-detail-page.html
@@ -76,8 +76,8 @@
                         <i id="rightlst" class="fa-solid fa-angle-right fa-3x my-btn" style="color:#9F8D8D;"></i>
                     </div>
                     <div style="color:var(--blue1);width: 100%; background-color: var(--grey1);display:flex; justify-content: center; align-items: center;">
-                        <span class="fa-solid fa-pen fa-2x my-btn" style="margin:5px;">
-                        <span class="fa-solid fa-trash-can fa-1x my-btn" style="margin:5px;">
+                        <a href="edit-product-page.html"><span class="fa-solid fa-pen fa-2x my-btn" style="margin:5px;"></span></a>
+                        <a href="product-list-page.html"><span class="fa-solid fa-trash-can fa-2x my-btn" style="margin:5px;"></span></a>
                     </div>
                 </div>
                
