fix navbar-toggler and link

--- a/CoCo/front-end/index.html
+++ b/CoCo/front-end/index.html
@@ -20,7 +20,7 @@
     <main class="index">
         <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img src="images/Logo.png" alt="logo" style="height:65px;align-self:center;">
                 </a>
             </div>
