--- a/CoCo/front-end/admin/index.html
+++ b/CoCo/front-end/admin/index.html
@@ -20,7 +20,7 @@
     <main class="index">
         <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img src="../images/Logo.png" alt="logo" style="height:65px;align-self:center;">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -36,9 +36,9 @@
                                 QUẢN LÝ
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">XEM DANH SÁCH</a></li>
-                                <li><a class="dropdown-item" href="#">THÊM NGƯỜI QUẢN LÝ</a></li>
-                                <li><a class="dropdown-item" href="#">LỊCH SỬ HOẠT ĐỘNG</a></li>
+                                <li><a class="dropdown-item" href="./managers/list-manager-page.html">XEM DANH SÁCH</a></li>
+                                <li><a class="dropdown-item" href="./managers/add-manager-page.html">THÊM NGƯỜI QUẢN LÝ</a></li>
+                                <li><a class="dropdown-item" href="./managers/list-manager-history-page.html">LỊCH SỬ HOẠT ĐỘNG</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -47,8 +47,8 @@
                                 ĐỊA ĐIỂM
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">XEM DANH SÁCH</a></li>
-                                <li><a class="dropdown-item" href="#">THÊM ĐỊA ĐIỂM</a></li>
+                                <li><a class="dropdown-item" href="./addresses/address-detail-page.html">XEM DANH SÁCH</a></li>
+                                <li><a class="dropdown-item" href="./addresses/add-address-page.html">THÊM ĐỊA ĐIỂM</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -80,7 +80,7 @@
                         <div class="footer-contact">
                             <span class="fa-solid fa-envelope"></span>
                             <span>coco123@gmail.com</span>
-                            <img src="images/Logo.png" alt="logo" style="width:200px;" />
+                            <img src="../images/Logo.png" alt="logo" style="width:200px;" />
                         </div>
 
                     </div>
