--- a/CoCo/front-end/manager/index.html
+++ b/CoCo/front-end/manager/index.html
@@ -20,7 +20,7 @@
     <main class="index">
         <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img src="../images/Logo.png" alt="logo" style="height:65px;align-self:center;">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -78,7 +78,7 @@
                         <div class="footer-contact">
                             <span class="fa-solid fa-envelope"></span>
                             <span>coco123@gmail.com</span>
-                            <img src="images/Logo.png" alt="logo" style="width:200px;" />
+                            <img src="../images/Logo.png" alt="logo" style="width:200px;" />
                         </div>
 
                     </div>
