--- a/CoCo/front-end/related-people/information.html
+++ b/CoCo/front-end/related-people/information.html
@@ -51,11 +51,13 @@
             </div>
             <div class="info-container">
                 <div class="side-info">
-                    <div id="avatar">
-                        <img src="images/avatar.jpg" alt="avatar.jpg">
-                    </div>
-                    <div>
-                        <p id="username">Nguyễn Đăng Tiến Thành</p>
+                    <div id="avatar-username">
+                        <div id="avatar">
+                            <img src="images/avatar.jpg" alt="avatar.jpg">
+                        </div>
+                        <div>
+                            <p id="username">Nguyễn Đăng Tiến Thành</p>
+                        </div>
                     </div>
                     <div class="main-info">
                         <div class="info-tag">CMND:&nbsp;123456789000</div>
