responsive for 500px screen

--- a/CoCo/front-end/manager/products/product-detail-page.html
+++ b/CoCo/front-end/manager/products/product-detail-page.html
@@ -32,7 +32,7 @@
             <div class="path">
                 <a href="/trang-chu">Trang chủ > </a>
                 <a href="/nhu-yeu-pham">Nhu yếu phẩm > </a>
-                <a href="/danh-sach-san-pham">Danh sách nhu yếu phẩm</a>
+                <a href="/danh-sach-san-pham">Danh sách nhu yếu phẩm > </a>
                 <a href="/thit-heo-500gram">Thịt heo 500 gram</a>
             </div>
             <div class="searchbar">
