--- a/CoCo/front-end/admin/admin-account.html
+++ b/CoCo/front-end/admin/admin-account.html
@@ -62,7 +62,7 @@
             <div class="info-container">
                 <div class="side-info">
                     <div id="avatar">
-                        <img src="images/avatar.jpg" alt="avatar.jpg">
+                        <img src="./images/avatar.png" alt="avatar">
                     </div>
                     <div>
                         <p id="username">Nguyễn Văn A</p>
