--- a/CoCo/front-end/admin/managers/manager-details-page.html
+++ b/CoCo/front-end/admin/managers/manager-details-page.html
@@ -69,7 +69,7 @@
             <div class="content">
                 <div class="row">
                     <div class="col-lg-8 col-md-7 col-sm-12">
-                        <div id="manager-history-table"></div>
+                        <div id="manager-history-table" class="table-responsive" style="height: 100%;"></div>
                     </div>
                     <div class="col-lg-4 col-md-5 col-sm-12 d-flex flex-column">
                       <div class="side-info bg-form p-5">
