complete homepage CoCoPay

--- a/CoCo/front-end/index.html
+++ b/CoCo/front-end/index.html
@@ -36,12 +36,12 @@
                 <form>
                     <div class="form-floating mb-3">
                         <input class="form-control border-2 border-dark" id="floatingInput"
-                            placeholder="name@example.com">
+                            placeholder="0123456789">
                         <label for="floatingInput">Số CMND/CCCD</label>
                     </div>
                     <div class="form-floating">
                         <input type="password" class="form-control border-2 border-dark" id="floatingPassword"
-                            placeholder="Password">
+                            placeholder="Mật khẩu">
                         <label for="floatingPassword">Mật khẩu</label>
                     </div>
                     <button type="submit" class="sign-in">ĐĂNG NHẬP</button>
