--- a/CoCoPay/front-end/index.html
+++ b/CoCoPay/front-end/index.html
@@ -30,7 +30,14 @@
         </section>
 
         <section class="content container-fluid py-5">
-            
+            <h2><p>Số dư: <strong>1.000.000 VNĐ</strong></p></h2>
+            <form>
+                <div class="form-floating mb-3">
+                    <input class="form-control border-2 border-dark" id="floatingInput" placeholder="0">
+                    <label for="floatingInput">Nạp tiền (VNĐ)</label>
+                </div>
+                <button type="submit" class="sign-in">Xác nhận</button>
+            </form>
         </section>
     </main>
 
