--- a/CoCoPay/front-end/sign-in.html
+++ b/CoCoPay/front-end/sign-in.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/sign-in.css">
     <title>CoCoPay</title>
 </head>
 
@@ -34,12 +34,12 @@
                 <form>
                     <div class="form-floating mb-3">
                         <input class="form-control border-2 border-dark" id="floatingInput"
-                            placeholder="name@example.com">
+                            placeholder="0123456789">
                         <label for="floatingInput">Số CMND/CCCD</label>
                     </div>
                     <div class="form-floating">
                         <input type="password" class="form-control border-2 border-dark" id="floatingPassword"
-                            placeholder="Password">
+                            placeholder="Mật khẩu">
                         <label for="floatingPassword">Mật khẩu</label>
                     </div>
                     <button type="submit" class="sign-in">ĐĂNG NHẬP</button>
