set links for product pages

--- a/CoCo/front-end/manager/products/product-detail-page.html
+++ b/CoCo/front-end/manager/products/product-detail-page.html
@@ -31,9 +31,9 @@
         <div class="content">
             <div class="path">
                 <a href="/trang-chu">Trang chủ > </a>
-                <a href="/nhu-yeu-pham">Nhu yếu phẩm > </a>
-                <a href="/danh-sach-san-pham">Danh sách nhu yếu phẩm > </a>
-                <a href="/thit-heo-500gram">Thịt heo 500 gram</a>
+                <a href="product-list-page.html">Nhu yếu phẩm > </a>
+                <a href="product-list-page.html">Danh sách nhu yếu phẩm > </a>
+                <a href="product-detail-page.html">Thịt heo 500 gram</a>
             </div>
             <div class="searchbar">
                 <input type="text" class="searchbar-input" placeholder="Tìm kiếm nhu yếu phẩm">
