--- a/CoCo/front-end/manager/products/product-list-page.html
+++ b/CoCo/front-end/manager/products/product-list-page.html
@@ -18,7 +18,7 @@
 <body>
     <main>
         <nav class="navbar">
-            <img class="logo-img" src="/CoCo/front-end/images/Logo.png" alt="logo">
+            <img class="logo-img my-btn" src="/CoCo/front-end/images/Logo.png" alt="logo">
             <ul class="nav-list">
                 <li><a href="#" class="nav-links">NGƯỜI LIÊN QUAN COVID-19</a></li>
                 <li><a href="#" class="nav-links">NHU YẾU PHẨM</a></li>
