--- a/CoCo/front-end/manager/products/edit-product-page.html
+++ b/CoCo/front-end/manager/products/edit-product-page.html
@@ -16,7 +16,7 @@
 <body>
     <main>
         <nav class="navbar">
-            <img src="/CoCo/front-end/images/Logo.png" alt="logo" style="height:65px;align-self:center;">
+            <img class="logo-img my-btn" src="/CoCo/front-end/images/Logo.png" alt="logo">
             <ul class="nav-list">
                 <li><a href="#" class="nav-links">NGƯỜI LIÊN QUAN COVID-19</a></li>
                 <li><a href="#" class="nav-links">NHU YẾU PHẨM</a></li>
