--- a/CoCo/front-end/admin/managers/manager-details-page.html
+++ b/CoCo/front-end/admin/managers/manager-details-page.html
@@ -78,7 +78,7 @@
                             </div>
                             <div id="name"></div>
                             <div class="button">
-                                <button type="button" class="btn btn-dark text-white btn-sm">Khóa tài khoản</button>
+                                <button type="button" class="custom-btn btn btn-dark text-white btn-sm">Khóa tài khoản</button>
                             </div>
                       </div>
                     </div>
