--- a/CoCo/front-end/admin/managers/list-manager-history-page.html
+++ b/CoCo/front-end/admin/managers/list-manager-history-page.html
@@ -74,7 +74,7 @@
               <div class="filter">
                 <p id="filter-heading">Bộ lọc</p>
                 <div id="filters" class="row" style="clear: both;">
-                  <div class="col-lg-4 col-md-4 col-sm-12">
+                  <div class="col-lg-4 col-md-12 col-sm-12 mb-3">
                       <div class="dropdown">
                           <button class="btn btn-light dropdown-toggle text-black" type="button"
                               id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
@@ -88,7 +88,7 @@
                           </ul>
                       </div>
                   </div>
-                  <div class="col-lg-4 col-md-4 col-sm-12">
+                  <div class="col-lg-4 col-md-12 col-sm-12 mb-3">
                       <div class="dropdown">
                           <button class="btn btn-light dropdown-toggle text-black" type="button"
                               id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
@@ -103,7 +103,7 @@
                           </ul>
                       </div>
                   </div>
-                  <div class="col-lg-4 col-md-4 col-sm-12">
+                  <div class="col-lg-4 col-md-12 col-sm-12">
                     <div class="dropdown">
                         <button class="btn btn-light dropdown-toggle text-black" type="button"
                             id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
