--- a/CoCo/front-end/manager/products/product-list-page.html
+++ b/CoCo/front-end/manager/products/product-list-page.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../css/style.css">
+    <link rel="stylesheet" href="../../css/template-style.css">
     <link rel="stylesheet" href="/CoCo/front-end/css/template-style.css">
     <link rel="stylesheet" href="css/product-style.css">
     <link rel="stylesheet" href="css/product-list-page.css">
