Update all managers page

--- a/CoCo/front-end/admin/admin-account.html
+++ b/CoCo/front-end/admin/admin-account.html
@@ -18,7 +18,7 @@
     <main>
         <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="./index.html">
                     <img src="../../images/Logo.png" alt="logo" style="height:50px;align-self:center;">
                 </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,9 +31,9 @@
                       NGƯỜI QUẢN LÝ
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="./add-manager-page.html">Thêm người quản lý</a></li>
-                      <li><a class="dropdown-item" href="./list-manager-page.html">Danh sách người quản lý</a></li>
-                      <li><a class="dropdown-item" href="./list-manager-history-page.html">Danh sách lịch sử người quản lý</a></li>
+                      <li><a class="dropdown-item" href="./managers/add-manager-page.html">Thêm người quản lý</a></li>
+                      <li><a class="dropdown-item" href="./managers/list-manager-page.html">Danh sách người quản lý</a></li>
+                      <li><a class="dropdown-item" href="./managers/list-manager-history-page.html">Danh sách lịch sử người quản lý</a></li>
                     </ul>
                   </li>
                   <li class="nav-item dropdown">
@@ -46,7 +46,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">TÀI KHOẢN ADMIN</a>
+                    <a class="nav-link" href="./admin-account.html">TÀI KHOẢN ADMIN</a>
                 </li>
                 </ul>
               </div>
