--- a/CoCo/front-end/admin/managers/manager-details-page.html
+++ b/CoCo/front-end/admin/managers/manager-details-page.html
@@ -22,7 +22,7 @@
 
       <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="./index.html">
                 <img src="../../images/Logo.png" alt="logo" style="height:50px;align-self:center;">
             </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,7 +50,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">TÀI KHOẢN ADMIN</a>
+                <a class="nav-link" href="../admin-account.html">TÀI KHOẢN ADMIN</a>
             </li>
             </ul>
           </div>
@@ -69,7 +69,7 @@
             <div class="content">
                 <div class="row">
                     <div class="col-lg-8 col-md-7 col-sm-12">
-                        <div id="manager-history-table" class="table-responsive" style="height: 100%;"></div>
+                        <div id="manager-history-table" class="table-responsive" style="height: 480px;"></div>
                     </div>
                     <div class="col-lg-4 col-md-5 col-sm-12 d-flex flex-column">
                       <div class="side-info bg-form p-5">
