--- a/CoCo/front-end/admin/managers/add-manager-page.html
+++ b/CoCo/front-end/admin/managers/add-manager-page.html
@@ -21,7 +21,7 @@
 
         <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="./index.html">
                     <img src="../../images/Logo.png" alt="logo" style="height:50px;align-self:center;">
                 </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,8 +34,9 @@
                       NGƯỜI QUẢN LÝ
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Thêm người quản lý</a></li>
-                      <li><a class="dropdown-item" href="#">Danh sách người quản lý</a></li>
+                      <li><a class="dropdown-item" href="./add-manager-page.html">Thêm người quản lý</a></li>
+                      <li><a class="dropdown-item" href="./list-manager-page.html">Danh sách người quản lý</a></li>
+                      <li><a class="dropdown-item" href="./list-manager-history-page.html">Danh sách lịch sử người quản lý</a></li>
                     </ul>
                   </li>
                   <li class="nav-item dropdown">
